--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,17 @@ charset-normalizer==2.0.12
 cryptography==36.0.2
 defusedxml==0.7.1
 Django==3.2.12
+django-debug-toolbar==3.2.4
+django-debug-toolbar-template-profiler==2.0.2
+django-extensions==3.1.5
+graphviz==0.19.2
 idna==3.3
 oauthlib==3.2.0
 Pillow==9.0.1
 pycparser==2.21
+pydotplus==2.0.2
 PyJWT==2.3.0
+pyparsing==3.0.8
 python3-openid==3.2.0
 pytz==2021.3
 requests==2.27.1
@@ -18,3 +24,4 @@ social-auth-app-django==5.0.0
 social-auth-core==4.2.0
 sqlparse==0.4.2
 urllib3==1.26.9
+wrapt==1.14.0
